tool-tip alignment issues fixed

--- a/src/app/will-writing/my-child-guardian/my-child-guardian.component.scss
+++ b/src/app/will-writing/my-child-guardian/my-child-guardian.component.scss
@@ -209,7 +209,7 @@
         position: absolute;
         bottom: 5px;
         border-radius: 0;
-        margin-right: -20px;
+        margin-right: -25px !important;
     }
 }
 
