--- a/src/app/will-writing/my-executor-trustee/my-executor-trustee.component.scss
+++ b/src/app/will-writing/my-executor-trustee/my-executor-trustee.component.scss
@@ -189,7 +189,7 @@
         background-repeat: no-repeat;
         position: absolute;
         bottom: 5px;
-        right: 0;
+        right: -25px;
         border-radius: 0;
     }
 }
